loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:9: error: type mismatch;
 found   : Unit
 required: Boolean
  if (comp=2){
          ^